# cotamer

./: .gitignore  CLAUDE.md  CMakeLists.txt  COTAMER.md  COTAMERIO.md  GNUmakefile  clientstub.cc  cot-test-io.cc  cot-test-threads.cc  cot-test.cc  cotamer.hh  cotamer_io.hh  cotamer_serial.hh  cotamer_tcp.hh  message_buffer.hh  netsim.hh  rpcg-client.cc  rpcgame.hh  serverstub.cc
cotamer/: config.hh.in  cotamer.cc  cotamer.hh  cotamer_impl.hh  curl.cc  curl.hh  event_handle.hh  http.cc  http.hh  http_fields.hh  io.cc  io.hh  small_vector.hh  timer_heap.hh  tls.cc  tls.hh  websocket.cc  websocket.hh
detail/: cotamer.cc  cotamer_impl.hh  small_vector.hh  timer_heap.hh
examples/: clientstub.cc  ctconsensus.cc  httpd.cc  https-fetch.cc  jsond-client.cc  jsond-curl-client.cc  jsond-tester-curl.cc  jsond-tester.cc  jsond.cc  lines.txt  message_stream.hh  netsim.hh  rpcg-client.cc  rpcg-server.cc  serverstub.cc  udp-jsond-client.cc  udp-jsond.cc  ws-echo.cc
test/: cot-benchmark.cc  cot-manual.cc  cot-test-curl.cc  cot-test-http.cc  cot-test-io.cc  cot-test-threads.cc  cot-test-tls.cc  cot-test-ws.cc  cot-test.cc
